# coordinode-python

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  ruff.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
coordinode/: README.md  __init__.py  _types.py  client.py  pyproject.toml
coordinode-embedded/: .gitignore  Cargo.toml  README.md  pyproject.toml
coordinode-embedded/python/coordinode_embedded/: __init__.py  _coordinode_embedded.pyi
coordinode-embedded/src/: hnsw.rs  lib.rs
coordinode/_proto/: __init__.py
coordinode/coordinode/: __init__.py  _types.py  client.py
demo/: Dockerfile.jupyter  README.md  docker-compose.yml  install-sdk.sh
demo/notebooks/: 00_seed_data.ipynb  01_llama_index_property_graph.ipynb  02_langchain_graph_chain.ipynb  03_langgraph_agent.ipynb
langchain-coordinode/: README.md  pyproject.toml
langchain-coordinode/langchain_coordinode/: __init__.py  graph.py
llama-index-coordinode/: README.md  pyproject.toml
llama-index-coordinode/llama_index/graph_stores/coordinode/: __init__.py  base.py
tests/integration/: test_basic.py  test_sdk.py
tests/integration/adapters/: test_langchain.py  test_llama_index.py
tests/unit/: test_consistency_helpers.py  test_hnsw.py  test_langchain_graph.py  test_schema_crud.py  test_types.py
