[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coordinode"
dynamic = ["version"]
description = "Python client for CoordiNode — graph + vector + full-text database"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "structured.world", email = "dev@structured.world" }]
keywords = ["graph", "vector", "database", "rag", "graphrag", "grpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/structured-world/coordinode"
Repository = "https://github.com/structured-world/coordinode-python"
Issues = "https://github.com/structured-world/coordinode-python/issues"

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"

[tool.hatch.build.hooks.vcs]
version-file = "coordinode/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["coordinode"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
