[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "langchain-coordinode"
dynamic = ["version"]
description = "LangChain integration for CoordiNode — GraphStore backed by graph + vector + full-text"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "structured.world", email = "dev@structured.world" }]
keywords = ["langchain", "graph", "rag", "graphrag", "coordinode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "coordinode>=0.6.0",
    "langchain-community>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/structured-world/coordinode"
Repository = "https://github.com/structured-world/coordinode-python"

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"
fallback-version = "0.0.0"
raw-options = {root = ".."}

[tool.hatch.build.hooks.vcs]
version-file = "langchain_coordinode/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["langchain_coordinode"]
