[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "llama-index-graph-stores-coordinode"
dynamic = ["version"]
description = "LlamaIndex PropertyGraphStore backed by CoordiNode"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "structured.world", email = "dev@structured.world" }]
keywords = ["llama-index", "graph", "knowledge-graph", "rag", "coordinode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "coordinode>=0.3.0a1",
    "llama-index-core>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/structured-world/coordinode"
Repository = "https://github.com/structured-world/coordinode-python"

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"
fallback-version = "0.0.0"
raw-options = {root = ".."}

[tool.hatch.build.hooks.vcs]
version-file = "llama_index/graph_stores/coordinode/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["llama_index"]
